--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>valzu1's GitHub page</title>
+    <link rel="stylesheet" href="/css/w3.css">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body class="w3-dark-grey">
     <h1>valzu1's GitHub page</h1>
