--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body class="w3-dark-grey">
-    <h1>valzu1's GitHub page</h1>
+    <div class="w3-bar w3-black">
+      <a>valzu1's GitHub page</a>
+    </div>
   </body>
 </html>
