--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="w3-dark-grey">
     <div class="w3-bar w3-black">
-      <a>valzu1's GitHub page</a>
+      <a href="index">valzu1's GitHub page</a>
     </div>
   </body>
 </html>
