--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>valzu1's GitHub page</title>
-    <link rel="stylesheet" href="/css/w3.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body class="w3-dark-grey">
-    <div class="w3-bar w3-black">
+    <div class="w3-bar">
       <a href="/">valzu1's GitHub page</a>
     </div>
   </body>
