--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
   </head>
-  <body class="w3-dark-grey">
-    <div class="w3-bar">
+  <body class="dark-grey">
+    <div>
       <a href="/">valzu1's GitHub page</a>
     </div>
   </body>
