Made the index look better

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="/css/styles.css">
     <title>valzu1's GitHub page</title>
   </head>
-  <body class="dark-gray">
-    <div class="labs-static-media-markup-theme-dark labs-static-media-markup-text" id="_labsstaticmediamarkup_WAR_labsstaticmediaportlet_INSTANCE_KUy5_textContainer">	<blockquote>
+  <body class="dark-grey">
+    <div class="grey" id="block1">
+      <blockquote>
       <h6>Minun poikani Mikko</h6>
       <p>&nbsp;</p>
       <p>Antti:<br>
