--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>valzu1's GitHub page</title>
   </head>
   <body class="dark-grey">
-    <div class="grey" id="block1">
+    <div class="grey col-6" id="block1">
       <blockquote>
       <h6>Minun poikani Mikko</h6>
       <p>&nbsp;</p>
@@ -33,6 +33,8 @@
         &nbsp;</p>
       <h4>Tuuve Aro, Sinikka Tammisen outo tyhjiö. 2001.</h4>
     </blockquote>
+  </div>
+  <div class="col-6">
   </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
