--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>[Novelli] Minun poikani Mikko</title>
   </head>
   <body class="dark-grey">
-    <div class="grey col-8" id="block1">
+    <div class="col-1">
+    </div>
+    <div class="grey col-10" id="block1">
       <blockquote>
       <h1>Minun poikani Mikko</h1>
       <p>&nbsp;</p>
@@ -34,7 +36,7 @@
       <h4>Tuuve Aro, Sinikka Tammisen outo tyhjiö. 2001.</h4>
     </blockquote>
   </div>
-  <div class="col-4">
+  <div class="col-1">
   </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
