--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<!doctype html>
-<html>
-<head>
-</head>
-<body>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Valtteri Tarvainen</title>
+    <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
+  </head>
+  <body>
+    <h1>Minun GitHub-kotisivuni</h1>
+  </body>
 </html>
