--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
   </head>
   <body>
-    <h1>Minun GitHub-kotisivuni</h1>
+    <h1>My homepage</h1>
   </body>
 </html>
